# ssoauth2ui

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yml  style.yml
